[metadata]
name = superior-cache
version = 1.0.0
author = numb.fy
description = Drop-in async cache for discord.py bots. Memory + Redis layers, TTL, tags, namespaces, and thundering-herd protection out of the box.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.9

[options]
packages = superior_cache
install_requires =
    discord.py>=2.3.0

[options.extras_require]
redis =
    redis>=5.0.0
